minigu/gql/parser/tests/snapshots/opengql/match.snap
---
source: minigu/parser/tests/parser_test.rs
---
Err:
  Unexpected:
    input: "MATCH (p:Person)-[r:IS_FRIENDS_WITH]->(friend:Person)\nWHERE EXISTS (MATCH (p)-[:WORKS_FOR]->(:Company {name: \"GQL, Inc.\"}))\nRETURN p, r, friend\n\nMATCH (p:Person)-[r:IS_FRIENDS_WITH]->(friend:Person)\nWHERE EXISTS (MATCH (p)-[:WORKS_FOR]->(:Company { name: \"GQL, Inc.\"}) )\nRETURN p, r, friend\n\nMATCH (p:Person)-[r:IS_FRIENDS_WITH]->(friend:Person)\nWHERE EXISTS { MATCH (p)-[:WORKS_FOR]->(:Company { name: \"GQL, Inc.\" }) RETURN p }\nRETURN p, r, friend\n"
    span:
      start: 0
      end: 5
    position:
      - 1
      - 1
